Added a start button

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <div class="container">
         <h1>Rank the Harry Potter Books</h1>
+        <button id="start-button" class="start-button">Start Ranking</button>
         <div id="question-container" class="question-container">
             <p id="question"></p>
             <button id="option1" class="option-button"></button>
