--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
             <ol id="result-list"></ol>
         </div>
     </div>
-    <script src="script.js"></script>
+    <script src="scripts.js"></script>
 </body>
 </html>
